@@ -1,3 +1,8 @@
+10 Apr 2007
+   [Alexey]
+   - Configurable avatar scaling on load
+   - Human-redable file sized on dcc transfers
+   
 12 Mar 2007
    [Alexey]
    - Added support for remote dns on socks5 proxy
